--- a/src/core/style/_variables.scss
+++ b/src/core/style/_variables.scss
@@ -30,9 +30,6 @@ $layout-breakpoint-sm:     960px !default;
 $layout-breakpoint-md:     1280px !default;
 $layout-breakpoint-lg:     1920px !default;
 
-// Button
-$button-left-right-padding: rem(0.800) !default;
-
 // Icon
 $icon-size: rem(2.400) !default;
 
@@ -119,8 +116,12 @@ $material-leave-duration: 0.3s;
 $material-leave-timing-function: cubic-bezier(0.4, 0.0, 1, 1);
 $material-leave: all $material-leave-duration $material-leave-timing-function;
 
+// Button
+$button-left-right-padding: rem(0.800) !default;
+$icon-button-height: rem(4.000) !default;
+$icon-button-width: rem(4.000) !default;
+
 // Fab Buttons (shared between buttons.scss and fab*.scss)
-// -------------------------------------------
 $button-fab-width: rem(5.600) !default;
 $button-fab-height: rem(5.600) !default;
 $button-fab-padding: rem(1.60) !default;
